--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -44,39 +44,7 @@ div.aboutMe{
     background-color:rgb(255, 204, 127)
 }
 
-nav{
-  width: 100;
-  margin: 30px;
-  
-}
 
-nav ul{
-    width: 100%;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    
-}
-
-nav ul li{
-    align-items: flex-end;
-    width: 20%;
-    float: left;
-    
-}
-nav ul li a{
-    display: block;
-    width: 100%;
-    background-color: black;
-    font-family:cursive
-}
-
-h2{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-style: italic;
-    
-    
-}
 
 img{
    border: 8px solid #555;
@@ -89,6 +57,7 @@ p{
     
 }
 
+/*social media icons*/
 .fa {
     padding: 20px;
     font-size: 100px;
@@ -98,6 +67,29 @@ p{
     border-radius: 50%;
   }
 
+.navbar{
+  background-color: black;
+  overflow: hidden;
+}
+
+.navbar a{
+  float: left;
+  color:coral;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover{
+  background-color: darkblue;
+  color: orange;
+}
+
+.navbar a.active{
+  background-color: rgba(156, 143, 143, 0.897);
+  color: yellow;
+}
 
   
   
