--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -2,6 +2,8 @@ body, html {
     height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-image: image(\Users\nance\Desktop\coding\Profesional-Portfolio\Images\KMN_0807.JPG);
+    
   }
   
   * {
@@ -17,7 +19,7 @@ body, html {
   
 
  
-div.aboutMe{
+.aboutMe{
     background-color:rgb(255, 204, 127)
 }
 
@@ -25,6 +27,7 @@ div.aboutMe{
 
 img{
    border: 8px solid #555;
+   position: center;
    
 }
 
@@ -55,18 +58,51 @@ p{
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 .navbar a:hover{
-  background-color: darkblue;
+  background-color: rgb(5, 6, 12);
   color: orange;
 }
 
 .navbar a.active{
-  background-color: rgba(156, 143, 143, 0.897);
+  background-color: rgba(129, 119, 119, 0.966);
   color: yellow;
 }
 
-  
-  
+.aboutimg{
+  justify-content: flex-start;
+}
+/*contact me */
+input[type=text], select, textarea {
+  width: 100px;
+  padding: 12px;
+  border: 1px solid rgb(235, 13, 13);
+  border-radius: 10px;
+  box-sizing: border-box;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  resize: vertical; 
+}
+
+input[type=submit] {
+  background-color:rgb(5, 6, 12);
+  color: white;
+  padding: 12px 30px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: rgb(243, 221, 23);
+}
+
+.container {
+  border-radius: 30px;
+  background-color: slategrey;
+  padding: 40px;
+}
+
+
