--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -1,40 +1,36 @@
-body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: image(\Users\nance\Desktop\coding\Profesional-Portfolio\Images\KMN_0807.JPG);
-    
-  }
+html {
+  height: 100%;
+  scroll-behavior: smooth;
+  background-image: linear-gradient(to bottom right, rgb(58, 56, 56), rgb(247, 119, 0));
+  display: flex;
+  flex-wrap: wrap;
   
-  * {
-    box-sizing: border-box;
-  }
-  
-  .bg-image {
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-
- 
-.aboutMe{
-    background-color:rgb(255, 204, 127)
 }
 
-
-
 img{
-   border: 8px solid #555;
-   position: center;
+  width: 400px;
+  height: 250px;
+  border: 5px solid;
+   border-color: rgb(247, 119, 0);
+   position: flex;
+   padding: 5px;
    
+} 
+
+aboutImg{
+  width: 300px;
+  height: 300px;
 }
 
 p{
-    background-color: black;
-    color: white;
-    
+  width: 500px; 
+  padding: 15px; 
+  background-color: black;
+  color:  rgb(247, 119, 0);
+  border: 20px;
+  border-color: #555;
+  margin: 10px;
+
 }
 
 /*social media icons*/
@@ -45,6 +41,7 @@ p{
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
+    color: rgb(247, 119, 0);
   }
 
 .navbar{
@@ -71,10 +68,10 @@ p{
   color: yellow;
 }
 
-.aboutimg{
-  justify-content: flex-start;
+.contactI{
+  color: rgb(247, 119, 0);
 }
-/*contact me */
+/*contact me page */
 input[type=text], select, textarea {
   width: 100px;
   padding: 12px;
@@ -104,5 +101,6 @@ input[type=submit]:hover {
   background-color: slategrey;
   padding: 40px;
 }
+
 
 
