--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -1,19 +1,23 @@
 html {
   height: 100%;
   scroll-behavior: smooth;
-  background-image: linear-gradient(to bottom right, rgb(58, 56, 56), rgb(247, 119, 0));
   display: flex;
   flex-wrap: wrap;
+  margin: 10px;
   
+}
+
+.background{
+  background-image: linear-gradient(gray, black);
 }
 
 img{
   width: 400px;
   height: 250px;
   border: 5px solid;
-   border-color: rgb(247, 119, 0);
-   position: flex;
-   padding: 5px;
+  border-color: rgb(247, 119, 0);
+  position: flex;
+  padding: 5px;
    
 } 
 
@@ -35,12 +39,12 @@ p{
 
 /*social media icons*/
 .fa {
-    padding: 20px;
+    padding: 45px;
     font-size: 100px;
-    width:100px;
+    width: 200px;
     text-align: center;
     text-decoration: none;
-    border-radius: 50%;
+    border-radius: 30%;
     color: rgb(247, 119, 0);
   }
 
@@ -102,5 +106,8 @@ input[type=submit]:hover {
   padding: 40px;
 }
 
-
-
+@media screen and (max-width: 800px) {
+  .left, .main, .right{
+    width: 100%;
+  }
+}
