--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -1,24 +1,38 @@
 html {
-  height: 100%;
   scroll-behavior: smooth;
-  display: flex;
-  flex-wrap: wrap;
-  margin: 10px;
-  
 }
 
+body{
+  font-family: "roboto mono";
+}
+h1,h2{
+  color: rgb(247, 119, 0);
+}
 .background{
   background-image: linear-gradient(gray, black);
+  padding: 20px;
+}
+
+.projects-section {
+  border-color: white;
+  padding: 20px;
+}
+.projects-container {
+  background-color: rgb(247, 119, 0);
+  border:darkblue;
+  position: relative;
+  align-content: center;
+  padding: 20px;
+  margin: 10px;
 }
 
 img{
   width: 400px;
   height: 250px;
-  border: 5px solid;
+  /* border: 5px solid;
   border-color: rgb(247, 119, 0);
   position: flex;
-  padding: 5px;
-   
+  padding: 5px; */
 } 
 
 aboutImg{
@@ -106,8 +120,9 @@ input[type=submit]:hover {
   padding: 40px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   .left, .main, .right{
     width: 100%;
+    height: 100%;
   }
 }
