--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -64,8 +64,9 @@ p{
 
 .navbar{
   background-color: black;
-  overflow: hidden;
+  
 }
+
 
 .navbar a{
   float: left;
@@ -78,7 +79,7 @@ p{
 
 .navbar a:hover{
   background-color: rgb(5, 6, 12);
-  color: orange;
+  color: rgb(157, 157, 161);
 }
 
 .navbar a.active{
